=========================================================================
CHANGE LOG
=========================================================================

2007-06-21  Warren L. DeLano <warren@delsci.com>

	* issued PyMOL 1.0, with updates to the help menu

	* updated numerous command entries in code for online support
	
	* missing ChangeLog entries for the past few weeks...ugh.
	
2007-05-30  Warren L. DeLano <warren@delsci.com>

	* align command now has default max_gap of 50 (for performance)
	
	* various updates to the sequence viewer to improve behavior
	
	* added "super" command to enable more robust alignments
	
2007-05-29  Warren L. DeLano <warren@delsci.com>

	* added hide_long_bonds setting to help with animating rxns
	
	* fixed problem reading NMR structures with HETATM/CONECT combo
	
2007-05-27  Warren L. DeLano <warren@delsci.com>

	* fixed map_set "average" action (which was broken..)
	
2007-05-24  Warren L. DeLano <warren@delsci.com>

	* subtle change to the behavior of "create": only atoms present in
	  the source state are added to the target object
	
	* discovered and corrected flaw in state-based selection handling
	
2007-05-20  Warren L. DeLano <warren@delsci.com>

	* adjusted performance, idle, and framerate measuring
	
2007-05-20  Warren L. DeLano <warren@delsci.com>

	* added global transparency sort
	
2007-05-16  Warren L. DeLano <warren@delsci.com>

	* fixed mpng export
	
	* cObjectDist now cObjectMeasurement (no C names/files renamed)
		
	* additional show/hide menu options for measurement objects
	
2007-05-16  Warren L. DeLano <warren@delsci.com>

	* fixed bug with selection modification menus
	
2007-05-14  Warren L. DeLano <warren@delsci.com>

	* fixed enable with selection-expression arguments
	
2007-05-10  Warren L. DeLano <warren@delsci.com>

	* added PyMOL_CmdCreate
	
2007-05-09  Warren L. DeLano <warren@delsci.com>

        * modified create to allow shifted multi-state object creation
	