@@ -2,6 +2,12 @@
 CHANGE LOG
 =========================================================================
 
+2007-07-08  Warren L. DeLano <warren@delsci.com>
+
+	* adjusted idle behavior when playing movies, sculpting, etc.
+
+	* added new selection operators: masked and protected
+	
 2007-06-21  Warren L. DeLano <warren@delsci.com>
 
 	* issued PyMOL 1.0, with updates to the help menu
